src/options/options.css
:root {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100vh;
  background: none;
  --pad: 1rem;
  --pad05: calc(.5 * var(--pad));
  --value-cell-w: 6ch;
}

body {
  background: none;
  display: flex;
  flex-direction: column;
  width: auto;
  min-width: 400px; /* showing almost everything in one line in English and CJK */
  max-width: 800px;
  max-height: calc(100vh - 32px);
  border: 1px solid var(--c60);
  box-shadow: 0px 5px 15px 3px hsla(0, 0%, 0%, .35);
}

main {
  background: var(--bg);
  display: flex;
  flex-direction: column;
  overflow-y: auto;
}

.clickable {
  text-decoration: underline dotted;
  cursor: pointer;
}

header {
  font-weight: bold;
  background-color: var(--accent-3);
  padding: var(--pad);
  display: flex;
  align-items: center;
  border-bottom: 1px solid hsla(0, 0%, 50%, .2);
  & h1 {
    flex: 1 0;
    margin: 0 var(--pad05);
  }
  & i:hover {
    color: var(--accent-1);
  }
}

html:not(.mv3) .mv3-only,
.firefox .chromium-only,
.chromium-only.chrome-no-popup-border {
  display: none;
}
label.chromium-only > :first-child::after {
  content: '(Chrome)';
  color: var(--c50);
  margin-left: .5ex;
}

.block {
  display: flex;
  align-items: center;
  padding: var(--pad05) var(--pad);
  position: relative;
  &:nth-last-child(n + 2) {
    border-bottom: 1px dotted var(--c80);
  }
}

h2 {
  flex: 0 0 8em;
  margin: 0;
  font-size: 120%;
  font-weight: bold;
  padding-right: 8px;
  box-sizing: border-box;
  overflow-wrap: break-word;
}

.items:not(.no-stretch) {
  width: 100%;
}
label {
  display: flex;
  align-items: center;
  .items:not(.no-stretch) & > :first-child {
    margin-right: 8px;
    flex-grow: 1;
  }
  .swap & {
    min-height: var(--input-height);
    > :first-child {
      order: 2;
      margin-right: 0;
    }
  }
}
.swap input:not([type=number]):not([type=radio]) {
  margin-right: calc(var(--value-cell-w) - var(--width));
}
.swap input[type=number] {
  margin-left: -2ch;
  width: calc(var(--value-cell-w) + 2ch - var(--gap));
}
.swap :is(.slider, input[type=color]) {
  --width: calc(var(--value-cell-w) * .7);
}
.radio-wrapper + span {
  margin-left: .5em;
}
input[type="number"] {
  --gap: 3px;
  width: calc(var(--value-cell-w) - var(--gap));
  margin-right: var(--gap);
  text-align: right;
  border: none;
  padding: 0;
}
input[type="color"] {
  --width: var(--value-cell-w);
  width: var(--width);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 0;
  margin: 4px 0 0 0;
  border: 1px solid var(--c65);
  border-radius: 2px;
  height: var(--input-height);
  cursor: pointer;
  &::-webkit-color-swatch-wrapper {
    padding: 0;
  }
  &::-moz-color-swatch {
    border: none;
  }
  &::-webkit-color-swatch {
    border: none;
  }
}
input[type=time] {
  margin: 0 .5em;
}
.slider {
  margin-left: 0;
}

label.disabled,
#favs.disabled + label {
  color: var(--c65);
  input {
    opacity: .5;
  }
}

#FOUC {
  background: #fb04;
}

footer {
  justify-content: center;
  padding: var(--pad05) var(--pad);
  background-color: var(--c90);
  margin: 0;
  border-top: 1px solid var(--c60);
  border-bottom: none;
  display: flex;
  & button {
    margin: 0 .25em;
  }
}

[data-cmd="check-updates"] button {
  position: relative;
}
[data-cmd="note"] {
  padding-left: .25rem;
  cursor: pointer;
  &.broken {
    font-size: 1.5rem;
    line-height: 1rem;
    vertical-align: text-bottom;
    color: red;
    &:hover {
      text-shadow: 0 0 1px darkred;
    }
  }
}

a.icon {
  > i {
    pointer-events: none;
    font-size: 16px;
    color: var(--c40);
    vertical-align: text-bottom;
  }
  &:hover > i {
    color: var(--fg);
  }
}

#message-box.note {
  align-items: center;
  justify-content: center;
  white-space: pre-wrap;
  > div {
    max-width: 40em;
    top: unset;
    right: unset;
    position: relative;
  }
}

.sync-status {
  padding-left: 1em;
  box-sizing: border-box;
  overflow-wrap: break-word;
  &::first-letter {
    text-transform: uppercase;
  }
}
[data-drive="webdav"] {
  width: 100%;
  border-spacing: 0;
  border-collapse: collapse;
  & td:nth-child(1) {
    padding: 1px .5em 1px 0;
    max-width: 10em;
    overflow-wrap: break-word;
  }
  & td:nth-child(2) {
    padding: 1px 0;
    width: 100%;
  }
  & input {
    width: 100%;
    box-sizing: border-box;
    line-height: 1.5;
  }
}
.sync-options:not([data-enabled]) .actions {
  display: none;
}
.sync-options .actions button {
  margin-top: .5em;
}

